<resources>
    <string name="app_name">ShoppingAppForInterview</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_basket">ADD BASKET</string>
    <string name="okay">Okay</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="my_card">MY CART</string>
    <string name="open_parentheses" translatable="false">(</string>
    <string name="close_parentheses" translatable="false">)</string>
    <string name="default_item_count" translatable="false">0</string>
    <string name="remove">REMOVE</string>
    <string name="my_basket">MY BASKET</string>
    <string name="error">ERROR</string>
    <string name="loading_shopping" translatable="false">drawable/loading_shopping.json</string>
    <string name="has_added">has added</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong">Something went wrong, you can swipe the layout to refresh</string>
    <string name="refreshing">Data is refreshing...</string>
    <string name="ordered_successfully">ordered successfully</string>
    <string name="order_failed">order failed</string>
    <string name="order_informations">Order informations</string>
    <string name="add_items_to_basket">Add item(s) to basket to order</string>
    <string name="order_successfully">Order has successfully</string>
    <string name="order_has_failed">Order has failed</string>


</resources>